# PatternPirates

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  input.txt  main  makefile
.github/workflows/: build-and-test-workflow.yml  build.yml  ci.yml
code/: main.cpp
documentation/html/: BillCaretaker_8h.html  BillCaretaker_8h__incl.map  BillCaretaker_8h__incl.md5  BillCaretaker_8h_source.html  BillMemento_8h.html  BillMemento_8h__dep__incl.map  BillMemento_8h__dep__incl.md5  BillMemento_8h__incl.map  BillMemento_8h__incl.md5  BillMemento_8h_source.html  BillPaid_8h.html  BillPaid_8h__dep__incl.map  BillPaid_8h__dep__incl.md5  BillPaid_8h__incl.map  BillPaid_8h__incl.md5  BillPaid_8h_source.html  Bill_8h.html  Bill_8h__dep__incl.map  Bill_8h__dep__incl.md5  Bill_8h__incl.map  Bill_8h__incl.md5  Bill_8h_source.html  Chef_8h.html  Chef_8h__dep__incl.map  Chef_8h__dep__incl.md5  Chef_8h__incl.map  Chef_8h__incl.md5  Chef_8h_source.html  Cook_8h.html  Cook_8h__dep__incl.map  Cook_8h__dep__incl.md5  Cook_8h_source.html  CookingChef_8h.html  CookingChef_8h__dep__incl.map  CookingChef_8h__dep__incl.md5  CookingChef_8h__incl.map  CookingChef_8h__incl.md5  CookingChef_8h_source.html  CustomerState_8h.html  CustomerState_8h__dep__incl.map  (+335 more)
documentation/latex/: BillCaretaker_8h.tex  BillCaretaker_8h__incl.md5  BillMemento_8h.tex  BillMemento_8h__dep__incl.md5  BillMemento_8h__incl.md5  BillPaid_8h.tex  BillPaid_8h__dep__incl.md5  BillPaid_8h__incl.md5  Bill_8h.tex  Bill_8h__dep__incl.md5  Bill_8h__incl.md5  Chef_8h.tex  Chef_8h__dep__incl.md5  (+144 more)
root/: main.cpp
src/: README
(+179 files in other folders)
